--- a/package.json
+++ b/package.json
@@ -12,10 +12,15 @@
     "@chakra-ui/react": "^1.8.7",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "@prisma/client": "^3.12.0",
+    "@types/node": "^17.0.23",
+    "@types/react": "^17.0.43",
     "framer-motion": "^6",
     "next": "12.1.4",
     "react": "18.0.0",
-    "react-dom": "18.0.0"
+    "react-dom": "18.0.0",
+    "swr": "^1.2.2",
+    "typescript": "^4.6.3"
   },
   "devDependencies": {
     "eslint": "8.12.0",
