--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "postinstall": "prisma generate"
+    "lint": "next lint"
   },
   "dependencies": {
     "@chakra-ui/react": "^1.8.7",
@@ -18,11 +17,14 @@
     "@types/react": "^17.0.43",
     "framer-motion": "^6",
     "next": "12.1.4",
+    "next-auth": "^4.3.1",
     "react": "18.0.0",
-    "react-dom": "18.0.0",
+    "react-dom": "^18.0.0",
+    "swr": "^1.2.2",
     "typescript": "^4.6.3"
   },
   "devDependencies": {
+    "@types/jspdf": "^2.0.0",
     "eslint": "8.12.0",
     "eslint-config-next": "12.1.4",
     "prisma": "^3.12.0"
